# rgbobj

./: Cargo.toml  LICENSE  README.md  rgbobj.1
.github/workflows/: testing.yml
src/: args.rs  main.rs  util.rs
