[package]
name = "rgbobj"
version = "1.0.0" # Remember to sync html_root_url in `main.rs`
authors = ["ISSOtm <me@eldred.fr>", "Rangi42"]
edition = "2018"
description = "A command-line program to print out RGBDS object files."
readme = "README.md"
repository = "https://github.com/gbdev/rgbobj"
license = "MIT"
keywords = ["rgbds", "gameboy", "asm", "assembly", "gamedev"]
categories = ["command-line-utilities", "development-tools::debugging", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.15.0"
paste = "1.0"
patharg = "0.4.1"
rgbds-obj = "0.5.0"
sigpipe = "0.1.3"
termcolor = "1.1.2"

[dependencies.clap]
version = "3.2"
features = [ "cargo", "wrap_help" ]


[profile.release]
lto = true
panic = "abort"
